[package]
name = "rust-app-template"
version = "0.1.0"
authors = ["Martin Elend"]
edition = "2018"
description = "A short description of my package"
readme = "README.md"
repository = "https://github.com/IIIMADDINIII/rust-app-template/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
